--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,7 +1,7 @@
 .home-container {
   padding: 2rem 4rem;
 }
-h2 {
+.home-container h2 {
   font-size: 2rem;
   margin-bottom: 1rem;
   text-align: center;
