--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -11,8 +11,11 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 2rem;
+  width: 100%;
+  margin: auto;
 }
 .product {
+  margin-bottom: 2rem;
   width: 250px;
   max-width: 100%;
   height: 400px;
