--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -36,6 +36,10 @@
   display: flex;
   align-items: center;
 }
+.cart-item__product img {
+  width: 200px;
+  height: 200px;
+}
 .cart-item__product-info button {
   border: none;
   background: none;
